# splitdefs

./: .gitignore  FILES  Makefile.in  README  config.h  config.h.in  configure  configure.in  reader.c  reader.h  splitdefs.1  splitdefs.c  splitdefs.perl  str.c  str.h  truefalse.h
